# sdk-oberon-psa-crypto

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig.oberon_psa_crypto  LICENSE  LICENSING.md  README.md  VERSION
.github/: test-spec.yml
api-tests/dev_apis/crypto/common/: test_crypto_common.c
api-tests/dev_apis/crypto/test_c042/: test_data.h
api-tests/dev_apis/crypto/test_c052/: test_data.h
api-tests/dev_apis/crypto/test_c053/: test_data.h
api-tests/dev_apis/crypto/test_c064/: test_data.h
api-tests/dev_apis/crypto/test_c065/: test_data.h
api-tests/dev_apis/crypto/test_c067/: test_data.h
api-tests/platform/drivers/watchdog/nrf/: nrf_wdt.c
api-tests/platform/targets/tgt_dev_apis_linux/nspe/: pal_crypto_config.h
api-tests/platform/targets/tgt_dev_apis_stdc/nspe/: pal_crypto_config.h
api-tests/tools/cmake/common/: CMakeSettings.cmake
api-tests/val/common/: val.h
api-tests/val/nspe/: val_entry.h
include/mbedtls/: build_info.h  config_psa.h  mbedtls_config.h  psa_util.h
include/psa/: crypto.h  crypto_config.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_key_derivation.h  crypto_driver_contexts_primitives.h  crypto_extra.h  crypto_sizes.h  crypto_struct.h  crypto_values.h
licenses-incoming/: LICENSE-PSA-CRYPTO-APIS.md
oberon/: oberon_Directory_Overview.md
oberon/docs/: Appendix_A_Supported_Crypto_Features.md  Appendix_B_Crypto_Configuration_Directives.md  Appendix_C_System_Crypto_Configuration_Examples.md  Appendix_D_Mbed_TLS.md  Appendix_E_Bug_Tracking.md  Appendix_F_Testing.md  Appendix_G_Glossary.md  Architecture.md  Crypto_Configuration.md  Crypto_Driver_Development.md  Documentation_Overview.md  Platform_Integration.md
oberon/drivers/: CMakeLists.txt  oberon_aead.c  oberon_aead.h  oberon_asymmetric_encrypt.c  oberon_asymmetric_encrypt.h  oberon_asymmetric_signature.c  oberon_asymmetric_signature.h  oberon_check_unsupported.h  oberon_cipher.c  oberon_cipher.h  oberon_config.h  oberon_ctr_drbg.c  oberon_ctr_drbg.h  oberon_ec_keys.c  oberon_ec_keys.h  oberon_ecdh.c  oberon_ecdh.h  oberon_ecdsa.c  oberon_ecdsa.h  oberon_eddsa.c  oberon_eddsa.h  oberon_hash.c  oberon_hash.h  oberon_helpers.c  oberon_helpers.h  oberon_hmac_drbg.c  oberon_hmac_drbg.h  oberon_jpake.c  oberon_jpake.h  oberon_key_agreement.c  oberon_key_agreement.h  oberon_key_derivation.c  oberon_key_derivation.h  oberon_key_encapsulation.c  oberon_key_encapsulation.h  oberon_key_management.c  oberon_key_management.h  oberon_key_wrap.c  oberon_key_wrap.h  oberon_lms.c  (+21 more)
oberon/drivers/ocrypto/: CMakeLists.txt
programs/: README-SSL.md
programs/ssl/: CMakeLists.txt
programs/ssl/include/mbedtls/: build_info.h  mbedtls_config_TLS1_2+3.h  mbedtls_config_TLS1_2.h
programs/ssl/include/psa/: crypto_config.h
tests/cycles/: CMakeLists.txt  README-CYCLES.md  cycle_test.c  cycle_test_ocrypto.c  cycle_test_psa_drivers.c  retarget.c  test_cycles.h
tests/cycles/M0/: Retarget.c
tests/cycles/M4F/: Retarget.c
tests/include/: oberon_test_drbg.h
tests/include/test/: macros.h  psa_crypto_helpers.h  psa_exercise_key.h
tests/src/: asn1parse_min.c  asn1write_min.c  helpers_min.c  kdf_test.c  key_wrap_test.c  lms_test.c  ml_kem_dsa_test.c  oberon_test_drbg.c  pake_test.c  psa_crypto_helpers.c  psa_exercise_key.c
tests/src/test_helpers/: ssl_helpers.c
val_common/: README.md  common_val.cmake
val_common/inc/: val_common.h  val_common_framework.h  val_common_log.h  val_common_peripherals.h  val_common_status.h
val_common/src/: val_common_framework.c  val_common_log.c  val_common_peripherals.c  val_common_status.c
zephyr/: module.yml
